Correccion de Vistas

--- a/act_Application/Views/Administrador/AdminTransacciones.cshtml
+++ b/act_Application/Views/Administrador/AdminTransacciones.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<act_Application.Models.BD.ActTransaccione>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Notificaciones";
 }
 <head>
     <meta charset="utf-8" />
