--- a/act_Application/Views/Login/Index.cshtml
+++ b/act_Application/Views/Login/Index.cshtml
@@ -26,7 +26,7 @@
                     <div class="input-box">
 
                         <header>Iniciar Sesion</header>
-                        <form action="@Url.Action("Index","Login")" method="post">
+                        <form action="@Url.Action("Notificaciones","Login")" method="post">
                             <div class="input-field">
                                 <input type="text" class="input" id="email" required="" autocomplete="off" name="Correo">
                                 <label for="email">Email</label>
