--- a/act_Application/Views/Notificaciones/Notificaciones.cshtml
+++ b/act_Application/Views/Notificaciones/Notificaciones.cshtml
@@ -1,6 +1,7 @@
-﻿@model IEnumerable<act_Application.Models.Sistema.NT_ViewModel>
+﻿@model IEnumerable<act_Application.Models.Sistema.ViewModels.Notificaciones_VM>
 @using act_Application.Data.Data;
 @using act_Application.Logic;
+@using act_Application.Models.Sistema.ViewModels;
 @{
     ViewData["Title"] = "Notificaciones";
     var NotifiRepository = new NotificacionesRepository();
