--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -131,7 +131,7 @@
                         }
 
                         <li class="nav-link">
-                            <a href="~/Notificaciones/Index">
+                            <a href="~/Notificaciones/Notificaciones">
                                 <i class='bx bx-bell icon'></i>
                                 <span class="text nav-text">Notificationes</span>
                             </a>
