--- a/act_Application/Views/Administrador/CreateAportaciones.cshtml
+++ b/act_Application/Views/Administrador/CreateAportaciones.cshtml
@@ -1,7 +1,7 @@
 ﻿@model act_Application.Models.BD.ActAportacione
 
 @{
-    ViewData["Title"] = "Crear Aportacion";
+    ViewData["Title"] = "Crear Aportar";
 }
 <head>
     <meta charset="utf-8" />
