--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -99,7 +99,7 @@
                         @if (User.HasClaim("Rol", "Administrador") || User.HasClaim("Rol", "Socio"))
                         {
                             <li class="nav-link">
-                                <a href="~/Aportar/Aportacion">
+                                <a href="~/Aportar/Aportar">
                                     <i class='bx bx-money icon'></i>
                                     <span class="text nav-text">Aportar</span>
                                 </a>
@@ -123,7 +123,7 @@
                         @if (User.HasClaim("Rol", "Administrador") || User.HasClaim("Rol", "Referido"))
                         {
                             <li class="nav-link">
-                                <a href="~/Transacciones/Create">
+                                <a href="~/Transacciones/Transacciones">
                                     <i class='bx bx-money-withdraw icon'></i>
                                     <span class="text nav-text">Peticiones</span>
                                 </a>
@@ -131,7 +131,7 @@
                         }
 
                         <li class="nav-link">
-                            <a href="~/Notificaciones/Notificaciones">
+                            <a href="~/Notificaciones/Notificacion">
                                 <i class='bx bx-bell icon'></i>
                                 <span class="text nav-text">Notificationes</span>
                             </a>
