Vista Menu Principal Parte 5 (Controllaor Home)

--- a/act_Application/Views/Notificaciones/Notificacion.cshtml
+++ b/act_Application/Views/Notificaciones/Notificacion.cshtml
@@ -58,7 +58,7 @@
                                         <div class="container-modal-btn">
                                             <button class="btn-mdl-confir" data-notification-id="@notificacionAdmin.Notificaciones.Id">Confirmar</button>
                                             <button class="bt-denegar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Denegar</button>
-                                            <a href="~/Notificaciones/Index" class="modal__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
+                                            <a href="~/Notificaciones/Notificacion" class="modal__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
                                         </div>
                                     </div>
                                 </div>
@@ -76,7 +76,7 @@
                                         </div>
                                         <div class="container-modal-denagado-btn">
                                             <button type="submit" class="save-button" data-notification-id="@notificacionAdmin.Notificaciones.Id">Guardar</button>
-                                            <a href="~/Notificaciones/Index" class="modal-secundaria__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
+                                            <a href="~/Notificaciones/Notificacion" class="modal-secundaria__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
                                         </div>
                                     </form>
                                 </div>
@@ -107,7 +107,7 @@
                                             </div>
                                             <div class="container-modal-btn">
                                                 <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="save-button">Guardar</button>
-                                                <a href="~/Notificaciones/Index" class="modal-secundaria__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
+                                                <a href="~/Notificaciones/Notificacion" class="modal-secundaria__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
                                             </div>
                                         </form>
                                     </div>
@@ -130,7 +130,7 @@
                                             <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
                                             <p class="modal__paragraph"><strong>Destino:</strong> @notificacionAdmin.Notificaciones.Destino</p>
                                             <div class="container-modal-btn">
-                                                <a href="~/Notificaciones/Index" class="modal__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
+                                                <a href="~/Notificaciones/Notificacion" class="modal__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
                                             </div>
                                         </div>
                                     </div>
@@ -144,7 +144,7 @@
                                         <div class="modal__content">
                                             <p>Transaccion Con Estado Erroneo</p>
                                             <div class="container-modal-btn">
-                                                <a href="~/Notificaciones/Index" class="modal__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
+                                                <a href="~/Notificaciones/Notificacion" class="modal__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
                                             </div>
                                         </div>
                                     </div>
@@ -185,7 +185,7 @@
                                             <p class="modal__paragraph"><strong>Descripcion:</strong></p>
                                             <p class="modal__description">@notificacionUser.Notificaciones.Descripcion</p>
                                             <div class="container-modal-btn">
-                                                <a href="~/Notificaciones/Index" class="modal__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
+                                                <a href="~/Notificaciones/Notificacion" class="modal__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
                                             </div>
                                         </div>
                                     </div>
@@ -206,7 +206,7 @@
                                                 <div class="container-modal-btn">
                                                     <button class="btn-mdl-aceptar" data-notification-id="@notificacionUser.Notificaciones.Id">Aceptar</button>
                                                     <button class="btn-mdl-rechazar" data-notification-id="@notificacionUser.Notificaciones.Id">Rechazar</button>
-                                                    <a href="~/Notificaciones/Index" class="modal__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
+                                                    <a href="~/Notificaciones/Notificacion" class="modal__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -221,7 +221,7 @@
                                                     <input type="hidden" asp-for="@notificacionUser.Transacciones.Id" name="Id" id="Id" />
                                                     <div class="container-modal-btn">
                                                         <button type="submit" data-notification-id="@notificacionUser.Notificaciones.Id" class="save-button">Aceptar</button>
-                                                        <a href="~/Notificaciones/Index" class="modal-secundaria__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
+                                                        <a href="~/Notificaciones/Notificacion" class="modal-secundaria__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
                                                     </div>
                                                 </form>
                                             </div>
@@ -237,7 +237,7 @@
                                                     <input type="hidden" asp-for="@notificacionUser.Transacciones.Id" name="Id" id="Id" />
                                                     <div class="container-modal-btn">
                                                         <button type="submit" class="save-button" data-notification-id="@notificacionUser.Notificaciones.Id">Rechazar</button>
-                                                        <a href="~/Notificaciones/Index" class="modal-secundaria__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
+                                                        <a href="~/Notificaciones/Notificacion" class="modal-secundaria__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
                                                     </div>
                                                 </form>
                                             </div>
