Vista Menu Principal Parte 10 (Ventana Modal, Datos Unificados, Repository)

--- a/act_Application/Views/Administrador/AdminParticipantes.cshtml
+++ b/act_Application/Views/Administrador/AdminParticipantes.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<act_Application.Models.BD.ActParticipante>
+﻿@model IEnumerable<act_Application.Models.BD.ActEvento>
 
 @{
     ViewData["Title"] = "ParticipantesId";
