--- a/act_Application/Views/Administrador/DeleteParticipantes.cshtml
+++ b/act_Application/Views/Administrador/DeleteParticipantes.cshtml
@@ -1,4 +1,4 @@
-﻿@model act_Application.Models.BD.ActParticipante
+﻿@model act_Application.Models.BD.ActEvento
 
 @{
     ViewData["Title"] = "Delete";
