--- a/act_Application/wwwroot/css/General/Home/Esqueleto/Esqueleto.css
+++ b/act_Application/wwwroot/css/General/Home/Esqueleto/Esqueleto.css
@@ -23,24 +23,28 @@
     }
 
 .item1 {
+    background-color: white;
     grid-column: 1/4; /*Ancho*/
     grid-row: 1/3; /*Largo*/
     border-radius: 8px 9px;
 }
 
 .item2 {
+    background-color: white;
     grid-column: 4/5;
     grid-row: 1/1;
     border-radius: 8px 9px;
 }
 
 .item3 {
+    background-color: white;
     grid-column: 4/5;
     grid-row: 2/2;
     border-radius: 8px 9px;
 }
 
 .item4 {
+    background-color: white;
     grid-column: 1/2;
     grid-row: 3/6;
     border-radius: 8px 9px;
@@ -54,6 +58,7 @@
 }
 
 .item6 {
+    background-color: white;
     grid-column: 2/5;
     grid-row: 5/6;
     border-radius: 8px 9px;
