--- a/act_Application/Views/Home/Menu.cshtml
+++ b/act_Application/Views/Home/Menu.cshtml
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="/css/General/Home/Profile/cardProfile.css" />
     <link rel="stylesheet" href="/css/General/Home/Main/Main.css" />
     <link rel="stylesheet" href="/css/General/Home/Footer/Botones-Footer.css" />
-    <link rel="stylesheet" href="/css/General/Home/Footer/Eventos-modal.css" />
+    <link rel="stylesheet" href="/css/General/Home/Footer/VentanaModal.css" />
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/Menu/Eventos/Evento.js"></script>
+    <script src="/js/Menu/Eventos/Eventos.js"></script>
 </head>
 <body>
     <div class="grid-container">
@@ -64,11 +64,11 @@
                     {
                         @if(evento.Eventos.Estado =="CONCURSO")
                         {
-                            <div class="content-formulario">
-                                <button type="submit" class="btn-participante" id="btn-participante">Evento #@evento.Eventos.Id </button>
+                            <div class="content-formulario" id="content-formulario-@evento.Eventos.Id">
+                                <button type="submit" class="btn-participante" data-event-id="@evento.Eventos.Id">Evento #@evento.Eventos.Id </button>
                             </div>
 
-                            <div class="eventos-modal">
+                            <div class="eventos-modal" id="eventos-modal-@evento.Eventos.Id">
                                 <div class="modal-content">
                                     <div class="modal-supr">
                                         <h2 class="modal-evento-titulo">Evento de Participacion #@evento.Eventos.Id</h2>
@@ -80,8 +80,8 @@
                                     <div class="modal-infr" id="modal-infr-@evento.Eventos.Id">
                                         <form asp-action="Participar">
                                             <input type="hidden" asp-for="@evento.Eventos.Id" id="IdP" name="IdP"/>
-                                            <button class="add-participante" type="submit">Participar</button>
-                                            <a href="" class="close-modal">Cerrar</a>
+                                            <button class="add-participante" type="submit" data-event-id="@evento.Eventos.Id">Participar</button>
+                                            <a href="" class="close-modal" data-event-id="@evento.Eventos.Id">Cerrar</a>
                                         </form>
 
                                     </div>
