--- a/act_Application/wwwroot/css/General/Notificaciones/Notificaciones_1.css
+++ b/act_Application/wwwroot/css/General/Notificaciones/Notificaciones_1.css
@@ -64,6 +64,9 @@ body:not(.dark) .content-text {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
 }
 
 .modal__container {
