--- a/act_Application/Views/Home/Menu.cshtml
+++ b/act_Application/Views/Home/Menu.cshtml
@@ -17,6 +17,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/js/Menu/Eventos/Eventos.js"></script>
+    <script src="../Logic/VisualizacionEventos.js"></script>
 </head>
 <body>
     <div class="grid-container">
